--- a/vignettes/comparison-with-other-packages.Rmd
+++ b/vignettes/comparison-with-other-packages.Rmd
@@ -4,7 +4,7 @@ author: "Nathan Green"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Comparison with other packages}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
