--- a/vignettes/probability-sensitivity-analysis.Rmd
+++ b/vignettes/probability-sensitivity-analysis.Rmd
@@ -44,37 +44,30 @@ tree_dat <-
   list(child = list("1" = c(2, 3),
                     "2" = NULL,
                     "3" = NULL),
-       dat = tibble(node = 1:3,
-                    prob =
-                      list(
-                        NA_real_,
-                        list(distn = "unif", params = c(min = 0, max = 1)),
-                        list(distn = "unif", params = c(min = 0, max = 1))),
-                    vals =
-                      list(
-                        0L,
-                        list(distn = "unif", params = c(min = 0, max = 1)),
-                        list(distn = "unif", params = c(min = 0, max = 1)))))
+       dat = tibble(
+         node = 1:3,
+         prob =
+           list(
+             NA_real_,
+             list(distn = "unif", params = c(min = 0, max = 1)),
+             list(distn = "unif", params = c(min = 0, max = 1))),
+         vals =
+           list(
+             0L,
+             list(distn = "unif", params = c(min = 0, max = 1)),
+             list(distn = "unif", params = c(min = 0, max = 1)))))
+
+tree_dat
 ```
 
 We can now loop over this tree and generate samples of values for the given distributions.
 We use the `sample_distributions()` function from my `treeSimR` package.
+This is all wrapped up in the convenience function `create_psa_inputs`.
 
 ```{r warning=FALSE}
-tree_dat_sa <- list()
+library(purrr)
 
-for (i in 1:1000) {
-  
-  tree_dat_sa[[i]] <-
-    define_model(
-      tree_dat =
-        list(child = tree_dat$child,
-             dat = data.frame(
-               node = tree_dat$dat$node,
-               prob = lapply(tree_dat$dat$prob, sample_distributions) %>% unlist(),
-               vals = lapply(tree_dat$dat$vals, sample_distributions) %>% unlist())
-        ))
-}
+tree_dat_sa <- create_psa_inputs(tree_dat, n = 1000)
 ```
 
 This results in a list of trees.
